--- a/app/views/debug.log.html
+++ b/app/views/debug.log.html
@@ -1,13 +1,13 @@
 <div ng-controller="DebugCtrl"
-    ng-cloak>
-    <div class="alert alert-flash alert-info"
-        ng-if="debug.visible">
+     ng-cloak>
+    <div class="alert alert-flash alert-info alert-logs"
+         ng-if="debug.visible">
         <button type="button" class="close"
-            ng-click="debug.toggle()">
+                ng-click="debug.toggle()">
             <span aria-hidden="true">&times;</span>
             <span class="sr-only">Close</span>
         </button>
         <h4>Log</h4>
-        <textarea ng-focus="debug.focus($event)">{{debug.logs}}</textarea>
+        <textarea ng-click="debug.focus($event)">{{debug.logs}}</textarea>
     </div>
 </div>
