--- a/app/views/account/receive.html
+++ b/app/views/account/receive.html
@@ -33,6 +33,7 @@
 
           <h5>Address</h5>
 
+          <!-- Used addresses -->
           <div class="list-group address-list address-list-used"
                ng-show="usedAddresses.length">
             <a class="list-group-item"
@@ -48,22 +49,40 @@
             <hr>
           </div>
 
+          <!-- Fresh addresses -->
           <div class="list-group address-list">
             <div ng-repeat="address in addresses">
               <a class="list-group-item"
-                  ng-class="{ active: activeAddress.address === address.address }"
-                  ng-click="activate(address)">
+                 ng-class="{
+                 invalid: address.invalid,
+                 active: activeAddress.address === address.address
+                 }"
+                 ng-click="activate(address)">
                 <span class="address-list-index"
                       >/{{address.path[address.path.length-1]}}</span>
-                <span class="address-list-address">{{address.address}}</span>
+                <span class="address-list-address"
+                      >{{address.address}}</span>
+
+                <!-- Address verification -->
+                <span class="pull-right"
+                      ng-if="enabledFeatures.addressVerification">
+                  <button class="btn btn-lg btn-link btn-verifyaddress"
+                          title="Verify with TREZOR"
+                          ng-if="
+                          device.isConnected() &&
+                          activeAddress.address === address.address"
+                          ng-click="verify()">
+                    <span class="glyphicon glyphicon-eye-open"></span>
+                  </button>
+                </span>
               </a>
               <div class="line-divider"
-                  ng-show="$first">
+                   ng-show="$first">
                 <hr>
                 <div class="line-divider-content text-center">
                   <button class="btn btn-xs btn-default"
-                      ng-disabled="addresses.length >= lookAhead"
-                      ng-click="more()">
+                          ng-disabled="addresses.length >= lookAhead"
+                          ng-click="more()">
                     More please
                     <span class="glyphicon glyphicon-plus"></span>
                   </button>
