add more explanatory texts

--- a/app/views/modal/button.html
+++ b/app/views/modal/button.html
@@ -48,7 +48,8 @@
   <div ng-switch-when="ButtonRequest_WipeDevice"
        class="alert alert-block alert-warning">
     <h4>All data on your device will be deleted.</h4>
-    This action cannot be undone. Please confirm on your device.
+    This action cannot be undone. Please confirm on your device.<br>
+    Never do this action with TREZOR holding coins unless you have your recovery seed at hand.
   </div>
 
   <div ng-switch-default class="alert alert-block alert-info">
