--- a/app/views/modal/firmware.html
+++ b/app/views/modal/firmware.html
@@ -76,7 +76,7 @@
       <div class="alert alert-warning alert-withicon">
         <span class="glyphicon glyphicon-warning-sign alert-icon"></span>
         <h4>Caution!</h4>
-        <strong>Always have your Recovery seed with you before updating firmware!</strong>
+        <strong>If your TREZOR is already initialized always have your Recovery seed with you before updating the firmware!</strong>
         <p>In very rare cases, a firmware update might result in the need to recover the wallet
         from Recovery seed.</p>
         <p><strong>For more information,
