device: Show qr for account xpubs, on hover

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -293,6 +293,10 @@ body {
   margin-bottom: 10px;
 }
 
+.nav-devices-accounts li:hover {
+  color: #000;
+}
+
 /* Error on inconsistent acc info */
 
 .alert-inconsistent .btn {
