add hint to xpub qr code

--- a/app/views/device/index.html
+++ b/app/views/device/index.html
@@ -45,17 +45,18 @@
         <hr>
         <div class="row">
           <div class="col-md-8">
-            <h5>Account public keys</h5>
+            <h5>Account public keys (XPUB)</h5>
             <ul class="nav nav-devices-accounts text-break">
               <li ng-repeat="account in device.accounts"
                   ng-mouseenter="highlightXpub(account.publicKey())"
                   ng-mouseleave="highlightXpub(null)"
                   class="text-muted">
                 <small>
-                  <strong>{{account.label()}}:</strong> {{account.publicKey()}}
+                  <strong>{{account.label()}}</strong><br/>{{account.publicKey()}}
                 </small>
               </li>
             </ul>
+            <small class="text-muted"><strong>Hint:</strong> Hover over the account public key to show its QR code. Scan it into an application that supports XPUBs such as <a target="_blank" href="https://play.google.com/store/apps/details?id=com.satoshilabs.btcreceive">myTREZOR Receive</a> for Android. Afterwards you can watch your transactions and receive payments everywhere without carrying your TREZOR around!</small>
           </div>
           <div class="col-md-4">
             <div ng-if="highlightedXpub">
