--- a/app/views/modal/pin.html
+++ b/app/views/modal/pin.html
@@ -96,6 +96,9 @@
   <div class="modal-footer">
     <button type="submit" class="btn btn-primary btn-block btn-lg"
             ng-disabled="ratePin(pin) === 'long'">Enter</button>
+    <br>
+    <small class="text-muted">Lost? Check our <a href="http://doc.satoshilabs.com/trezor-user/enteringyourpin.html" target="_blank">user manual</a>.</small>
   </div>
+
 
 </form>
