myTREZOR Receive -> myTREZOR Lite

--- a/app/views/device/index.html
+++ b/app/views/device/index.html
@@ -56,7 +56,7 @@
                 </small>
               </li>
             </ul>
-            <small class="text-muted"><strong>Hint:</strong> Hover over the account public key to show its QR code. Scan it into an application that supports XPUBs such as <a target="_blank" href="https://play.google.com/store/apps/details?id=com.satoshilabs.btcreceive">myTREZOR Receive</a> for Android. Afterwards you can watch your transactions and receive payments everywhere without carrying your TREZOR around!</small>
+            <small class="text-muted"><strong>Hint:</strong> Hover over the account public key to show its QR code. Scan it into an application that supports XPUBs such as <a target="_blank" href="https://play.google.com/store/apps/details?id=com.satoshilabs.btcreceive">myTREZOR Lite</a> for Android. Afterwards you can watch your transactions and receive payments everywhere without carrying your TREZOR around!</small>
           </div>
           <div class="col-md-4">
             <div ng-if="highlightedXpub">
