--- a/app/views/account/nav.html
+++ b/app/views/account/nav.html
@@ -1,15 +1,15 @@
 <ul ng-controller="NavCtrl"
     class="nav nav-tabs">
-  <li ng-class="{ active: isActive('/device/{{device.id}}/account/{{account.id}}$') }">
-    <a class="btn" href="#/device/{{device.id}}/account/{{account.id}}">
-      <span class="glyphicon glyphicon-transfer"></span> Transactions
-    </a>
-  </li>
-  <li ng-class="{ active: isActive('/device/{{device.id}}/account/{{account.id}}/receive$') }">
-    <a class="btn" href="#/device/{{device.id}}/account/{{account.id}}/receive">
-      <span class="glyphicon glyphicon-circle-arrow-right"></span> Receive
-    </a>
-  </li>
+    <li ng-class="{ active: isActive('/device/{{device.id}}/account/{{account.id}}$') }">
+        <a class="btn" href="#/device/{{device.id}}/account/{{account.id}}">
+            <span class="glyphicon glyphicon-transfer"></span> Transactions
+        </a>
+    </li>
+    <li ng-class="{ active: isActive('/device/{{device.id}}/account/{{account.id}}/receive$') }">
+        <a class="btn" href="#/device/{{device.id}}/account/{{account.id}}/receive">
+            <span class="glyphicon glyphicon-circle-arrow-right"></span> Receive
+        </a>
+    </li>
     <li ng-class="{ active: isActive('/device/{{device.id}}/account/{{account.id}}/send$') }"
         tooltip="Please connect your device to send coins."
         tooltip-trigger="{{ device.isConnected() ? 'manual' : 'mouseenter'}}"
@@ -22,19 +22,11 @@
     <li ng-class="{ active: isActive('/device/{{device.id}}/account/{{account.id}}/sign$') }"
         tooltip="Please connect your device to sign a message."
         tooltip-trigger="{{ device.isConnected() ? 'manual' : 'mouseenter'}}"
-        tooltip-placement="bottom">
+        tooltip-placement="bottom"
+        class="nav-tab-small">
         <a class="btn" href="#/device/{{device.id}}/account/{{account.id}}/sign"
            ng-disabled="!device.isConnected()">
-            <span class="glyphicon glyphicon-lock"></span> Sign a message
-        </a>
-    </li>
-    <li ng-class="{ active: isActive('/device/{{device.id}}/account/{{account.id}}/verify$') }"
-        tooltip="Please connect your device to verify a message."
-        tooltip-trigger="{{ device.isConnected() ? 'manual' : 'mouseenter'}}"
-        tooltip-placement="bottom">
-        <a class="btn" href="#/device/{{device.id}}/account/{{account.id}}/verify"
-           ng-disabled="!device.isConnected()">
-            <span class="glyphicon glyphicon-check"></span> Verify a message
+            <span class="glyphicon glyphicon-lock"></span> Sign & Verify
         </a>
     </li>
 </ul>
